<resources>
    <string name="app_name" translatable="false">zetta</string>
    <string name="analytics">Analytics</string>
    <string name="analytics_overview">Overview</string>
    <string name="platforms">Platforms</string>
    <string name="activity">Activity</string>
    <string name="total_downloads">Downloads</string>
    <string name="data_consumed">Data</string>
    <string name="time_spent">Time</string>
    <string name="no_analytics_yet">Nothing downloaded yet. Your stats will show up here.</string>
    <string name="recent_downloads">Recent downloads</string>
    <string name="others">Others</string>
    <string name="credits_author" translatable="false">Built and maintained by Nikshep Doggalli</string>
    <string name="credits_instagram" translatable="false">instagram.com/nikkk.exe</string>
    <string name="credits_site" translatable="false">nikshep.vercel.app</string>
    <string name="silent_share_download">Silent share download</string>
    <string name="silent_share_download_summary">Shared links download straight to a notification without opening the app</string>
    <string name="worst_quality">Worst quality</string>
    <string name="best_quality">Best quality</string>
    <string name="search">Search</string>
    <string name="remove_all">Remove all</string>
    <string name="remove_results">Clear results</string>
    <string name="download_all">Download all</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="directories">Folders</string>
    <string name="music_directory">Audio folder</string>
    <string name="video_directory">Video folder</string>
    <string name="updating">Updating</string>
    <string name="ytdl_update_hint">Useful tip while downloading updates</string>
    <string name="update_ytdl">Update yt-dlp to the new version</string>
    <string name="about">About</string>
    <string name="source_code">Source code</string>
    <string name="search_hint">Search or insert URL</string>
    <string name="failed_download">Could not download file</string>
    <string name="download_notification_channel_name">File downloads</string>
    <string name="download_notification_channel_description">Notification showing the progress of downloading audio and video files</string>
    <string name="you_are_in_latest_version">Using the latest version</string>
    <string name="ytld_update_success">New yt-dlp version installed</string>
    <string name="ytdl_already_updating">Installing new yt-dlp version</string>
    <string name="ytdl_updating_started">Downloading new yt-dlp version</string>
    <string name="Remove">Remove</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete_history_desc">Delete the entire history, permanently</string>
    <string name="confirm_delete_history">Confirm</string>
    <string name="search_history_hint">Search from history</string>
    <string name="search_command_hint">Search from commands</string>
    <string name="no_results">No results</string>
    <string name="more">Settings</string>
    <string name="update_app">Check for updates</string>
    <string name="version">Version</string>
    <string name="command_directory">Custom command folder</string>
    <string name="couldnt_find_apk">Could not find a suitable APK</string>
    <string name="downloading_update">Downloading new version</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="concurrent_fragments_summary">Number of fragments of a DASH/HLS native video to download concurrently</string>
    <string name="concurrent_fragments">Concurrent fragments</string>
    <string name="downloading">Downloading</string>
    <string name="limit_rate">Limit rate</string>
    <string name="limit_rate_summary">Maximum download rate (in bytes per second), e.g. 50K or 4.2M</string>
    <string name="aria2_summary">Use aria2c as downloader instead of the default</string>
    <string name="processing">Processing</string>
    <string name="embed_subs_summary">Add subtitles in the video</string>
    <string name="embed_thumb">Thumbnail covers</string>
    <string name="embed_thumb_summary">Use the thumbnail as cover art</string>
    <string name="add_chapters">Chapters in videos</string>
    <string name="add_chapters_summary">Mark YouTube / SponsorBlock segments as chapters for the video</string>
    <string name="save_thumb">Save thumbnail</string>
    <string name="save_thumb_summary">Save the thumbnail in the download folder</string>
    <string name="audio_format">Audio format</string>
    <string name="video_format">Video format</string>
    <string name="audio_quality">Audio quality</string>
    <string name="audio_quality_summary">0 (best) 10 (worst)</string>
    <string name="cancel_task">Cancel task</string>
    <string name="run_command">Run command</string>
    <string name="command_download_notification_channel_name">Command downloads</string>
    <string name="command_download_notification_channel_description">Notification showing the progress of downloading using a yt-dlp command</string>
    <string name="items_left">item(s) left</string>
    <string name="history_is_empty">History is empty</string>
    <string name="you_are_going_to_delete">Deleting</string>
    <string name="url">URL</string>
    <string name="link_copied_to_clipboard">Link copied to clipboard</string>
    <string name="api_key">Use API key</string>
    <string name="api_key_summary">Video recommendations from YouTube API</string>
    <string name="update_app_summary">Announce new versions of the app when it is opened. The data is extracted from the official GitHub Repository</string>
    <string name="downloads">Downloads</string>
    <string name="remove_deleted">Remove deleted</string>
    <string name="remove_duplicates">Remove duplicates</string>
    <string name="sort_by">Sorting</string>
    <string name="trendingPlaylist" translatable="false">ytdlnis-TRENDING</string>
    <string name="remove_downloading">Cancel downloads</string>
    <string name="incognito_summary">Download without adding to history</string>
    <string name="configure_download">Adjust download</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="download">Download</string>
    <string name="video_quality">Video quality</string>
    <string name="embed_subtitles">Embed subtitles</string>
    <string name="add_chapter">Add chapters</string>
    <string name="show_download_card">Show download card</string>
    <string name="download_card_summary">Modify settings for that item before downloading. Disabling this option starts the download immediately</string>
    <string name="Open_File">Open file</string>
    <string name="you_are_going_to_delete_multiple_items">Deleting multiple items</string>
    <string name="delete_file_too">Delete the file from the device</string>
    <string name="delete_files_too">Delete the files from the device</string>
    <string name="concurrent_downloads">Concurrent downloads</string>
    <string name="concurrent_downloads_summary">Number of downloads executing at the same time</string>
    <string name="defaultValue">Default</string>
    <string name="format">Format</string>
    <string name="preferred_download_type">Preferred download type</string>
    <string name="preferred_download_type_summary">Default tab the download card will open to</string>
    <string name="ytdl_version">yt-dlp version</string>
    <string name="end">End</string>
    <string name="start">Start</string>
    <string name="save_subs">Save subtitles</string>
    <string name="save_subs_desc">Write subtitle file</string>
    <string name="subtitle_languages">Subtitle languages</string>
    <string name="quick_download_summary">Continue with the download process immediately, without fetching data beforehand</string>
    <string name="remove_audio">Remove audio</string>
    <string name="general">General</string>
    <string name="retries">Retries</string>
    <string name="fragment_retries">Fragment retries</string>
    <string name="use_extra_commands">Add extra commands</string>
    <string name="use_extra_commands_summary">For audio / video downloads. Add extra commands along with the GUI configuration</string>
    <string name="subtitle_format">Subtitle format</string>
    <string name="use_cookies">Use cookies</string>
    <string name="use_sponsorblock">Use SponsorBlock</string>
    <string name="scheduling">Scheduling</string>
    <string name="use_scheduler">Download on schedule</string>
    <string name="remember_download_type">Remember download type</string>
    <string name="remember_download_type_summary">Select the last opened download type for the current item</string>
    <string name="preferred_audio_language">Preferred audio language</string>
    <string name="source">Source</string>
    <string name="app">App</string>
    <string name="bitrate">Bitrate</string>
    <string name="save_auto_subs">Save automatic subtitles</string>
    <string name="thumbnail_format">Thumbnail format</string>
    <string name="also_download_audio">Also download as audio</string>
    <string name="download_archive_folder">Download archive folder</string>
    <string name="reset">Reset</string>
    <string name="use_alarm_manager">Use AlarmManager instead of WorkManager for scheduling</string>
    <string name="use_alarm_manager_summary">Enable this if WorkManager is restricted by your device vendor or scheduled jobs are not too precise</string>
    <string name="cleanup_leftover_downloads">Clean-up leftover downloads (cancelled, errored)</string>
    <string name="socket_timeout">Socket timeout</string>
    <string name="socket_timeout_description">Time to wait before giving up, in seconds</string>
    <string name="advanced">Advanced</string>
    <string name="prefer_container_over_codec_audio">Prefer container over codec for audio downloads</string>
    <string name="prefer_container_over_codec_audio_summary">With this enabled, the preferred audio codec preference will be ignored and only container will change</string>
    <string name="reset_preferences_in_screen">Reset all preferences in this screen</string>
    <string name="no_keep_subs">Delete subtitle files after embedding</string>
    <string name="no_keep_subs_summary">When using both Embed Subtitles and Write Subtitles, don\'t keep the subtitle files after embedding</string>
    <string name="preferred_format_size">Preferred Format Size</string>
    <string name="quick_download_title">Don\'t fetch data</string>
    <string name="packages">Packages</string>
    <string name="whatsapp_connector">WhatsApp Connector</string>
    <string name="whatsapp_connector_summary">Send downloads directly to WhatsApp contacts</string>
    <string name="whatsapp_enabled">Enable WhatsApp sending</string>
    <string name="whatsapp_enabled_summary">Add WhatsApp send options to download notifications</string>
    <string name="whatsapp_auto_send">Auto-send to default contact</string>
    <string name="whatsapp_auto_send_summary">Automatically send to the configured contact instead of showing a contact picker</string>
    <string name="whatsapp_contact">Default contact</string>
    <string name="whatsapp_contact_summary">Phone number of the default WhatsApp contact</string>
    <string name="whatsapp_contact_dialog_title">Enter WhatsApp phone number</string>
    <string name="whatsapp_message_template">Message template</string>
    <string name="whatsapp_message_template_summary">Optional message to include with shared files</string>
    <string name="whatsapp_message_template_dialog_title">Enter message template</string>
    <string name="download_speed_limit">Download Speed Limit</string>
    <string name="download_speed_limit_summary">Limit download speed (0 = no limit)</string>
</resources>