<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory app:title="@string/downloading">

        <SwitchPreferenceCompat
            android:widgetLayout="@layout/preferece_material_switch"
            app:defaultValue="true"
            android:icon="@drawable/ic_card"
            android:key="download_card"
            app:summary="@string/download_card_summary"
            app:title="@string/show_download_card" />

        <SwitchPreferenceCompat
            android:widgetLayout="@layout/preferece_material_switch"
            app:defaultValue="false"
            android:icon="@drawable/ic_speed"
            android:key="quick_download"
            app:summary="@string/quick_download_summary"
            app:title="@string/quick_download_title" />

        <Preference
            android:defaultValue=""
            app:icon="@drawable/baseline_archive_24"
            app:key="download_archive_path"
            app:title="@string/download_archive_folder" />

        <ListPreference
            android:defaultValue="8"
            android:entries="@array/concurrent_downloads_entries"
            android:entryValues="@array/concurrent_downloads_values"
            android:icon="@drawable/ic_downloads"
            app:key="concurrent_downloads"
            app:summary="@string/concurrent_downloads_summary"
            app:title="@string/concurrent_downloads" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/speed_limit_entries"
            android:entryValues="@array/speed_limit_values"
            android:icon="@drawable/ic_speed"
            app:key="download_speed_limit"
            app:summary="@string/download_speed_limit_summary"
            app:title="@string/download_speed_limit" />

        <SwitchPreferenceCompat
            android:widgetLayout="@layout/preferece_material_switch"
            app:defaultValue="false"
            android:icon="@drawable/baseline_cookie_24"
            android:key="use_cookies"
            app:title="@string/use_cookies" />

        <ListPreference
            android:defaultValue="auto"
            android:entries="@array/download_types"
            android:entryValues="@array/download_types_values"
            android:icon="@drawable/ic_download_type"
            app:key="preferred_download_type"
            app:summary="@string/preferred_download_type_summary"
            app:title="@string/preferred_download_type" />

        <SwitchPreferenceCompat
            android:widgetLayout="@layout/preferece_material_switch"
            app:defaultValue="false"
            android:icon="@drawable/ic_download_type"
            android:key="remember_download_type"
            app:summary="@string/remember_download_type_summary"
            app:title="@string/remember_download_type" />

        <Preference
            android:defaultValue="video"
            android:key="last_used_download_type"
            app:isPreferenceVisible="false" />

        <SeekBarPreference
            android:defaultValue="3"
            android:icon="@drawable/ic_lines"
            android:max="25"
            app:key="concurrent_fragments"
            app:min="1"
            app:showSeekBarValue="true"
            app:summary="@string/concurrent_fragments_summary"
            app:title="@string/concurrent_fragments" />

        <EditTextPreference
            android:icon="@drawable/ic_clock"
            app:key="socket_timeout"
            android:summary="@string/socket_timeout_description"
            app:title="@string/socket_timeout"/>

        <SwitchPreferenceCompat
            android:widgetLayout="@layout/preferece_material_switch"
            app:defaultValue="false"
            android:icon="@drawable/ic_speed"
            android:key="aria2"
            app:summary="@string/aria2_summary"
            android:disableDependentsState="true"
            app:title="aria2c" />

        <ListPreference
            android:defaultValue=""
            android:entries="@array/cleanup_leftover_downloads"
            android:entryValues="@array/cleanup_leftover_downloads_values"
            android:icon="@drawable/ic_folder_delete"
            app:key="cleanup_leftover_downloads"
            app:useSimpleSummaryProvider="true"
            app:title="@string/cleanup_leftover_downloads" />

        <EditTextPreference
            app:key="retries"
            android:icon="@drawable/ic_retries"
            android:defaultValue=""
            app:useSimpleSummaryProvider="true"
            app:title="@string/retries" />

        <EditTextPreference
            app:key="fragment_retries"
            android:icon="@drawable/ic_retries"
            android:defaultValue=""
            app:useSimpleSummaryProvider="true"
            app:title="@string/fragment_retries" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/scheduling">
        <SwitchPreferenceCompat
            android:widgetLayout="@layout/preferece_material_switch"
            app:defaultValue="false"
            android:icon="@drawable/baseline_access_alarm_24"
            android:key="use_alarm_for_scheduling"
            android:summary="@string/use_alarm_manager_summary"
            app:title="@string/use_alarm_manager" />


        <SwitchPreferenceCompat
            android:widgetLayout="@layout/preferece_material_switch"
            app:defaultValue="false"
            android:icon="@drawable/ic_clock"
            android:key="use_scheduler"
            app:title="@string/use_scheduler" />

        <Preference
            android:icon="@drawable/ic_start"
            app:title="@string/start"
            app:defaultValue="00:00"
            app:summary="12:00"
            android:key="schedule_start"
        />

        <Preference
            app:title="@string/end"
            android:icon="@drawable/ic_end"
            app:defaultValue="05:00"
            app:summary="05:00"
            android:key="schedule_end"
            />
    </PreferenceCategory>

    <Preference
        app:defaultValue=""
        android:key="useragent_header"
        app:isPreferenceVisible="false" />



    <!-- ==== merged in from the old Processing screen ==== -->


    <PreferenceCategory android:title="@string/general">
        <SwitchPreferenceCompat
            android:widgetLayout="@layout/preferece_material_switch"
            app:defaultValue="true"
            app:icon="@drawable/ic_money"
            app:key="use_sponsorblock"
            app:title="@string/use_sponsorblock" />

        <SwitchPreferenceCompat
            android:widgetLayout="@layout/preferece_material_switch"
            app:defaultValue="true"
            app:icon="@drawable/ic_terminal"
            app:key="use_extra_commands"
            android:summary="@string/use_extra_commands_summary"
            app:title="@string/use_extra_commands" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/audio">
        <Preference
            android:icon="@drawable/baseline_high_quality_24"
            app:key="audio_bitrate"
            app:defaultValue=""
            android:summary="@string/defaultValue"
            app:title="@string/bitrate" />

        <ListPreference
            app:icon="@drawable/ic_language"
            app:dialogTitle="@string/preferred_audio_language"
            app:entries="@array/language_names"
            app:entryValues="@array/language_codes"
            app:key="audio_language"
            app:useSimpleSummaryProvider="true"
            app:title="@string/preferred_audio_language" />

        <SwitchPreferenceCompat
            android:widgetLayout="@layout/preferece_material_switch"
            app:defaultValue="false"
            app:icon="@drawable/ic_format"
            app:key="prefer_container_over_codec_audio"
            android:summary="@string/prefer_container_over_codec_audio_summary"
            app:title="@string/prefer_container_over_codec_audio" />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/video">
        <SwitchPreferenceCompat
            android:widgetLayout="@layout/preferece_material_switch"
            app:defaultValue="true"
            app:icon="@drawable/ic_subtitles"
            app:key="embed_subtitles"
            app:summary="@string/embed_subs_summary"
            app:title="@string/embed_subtitles" />

        <SwitchPreferenceCompat
            android:widgetLayout="@layout/preferece_material_switch"
            app:defaultValue="false"
            app:icon="@drawable/ic_subtitles_alternative"
            app:key="write_subtitles"
            app:summary="@string/save_subs_desc"
            app:title="@string/save_subs" />

        <SwitchPreferenceCompat
            android:widgetLayout="@layout/preferece_material_switch"
            app:defaultValue="false"
            app:icon="@drawable/ic_subtitles_alternative"
            app:key="write_auto_subtitles"
            app:summary="@string/save_subs_desc"
            app:title="@string/save_auto_subs" />

        <SwitchPreferenceCompat
            android:widgetLayout="@layout/preferece_material_switch"
            app:defaultValue="true"
            app:icon="@drawable/ic_subtitles"
            app:key="no_keep_subs"
            app:summary="@string/no_keep_subs_summary"
            app:title="@string/no_keep_subs" />

        <Preference
            android:icon="@drawable/baseline_subject_24"
            app:key="subs_lang"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="en.*,.*-orig"
            app:title="@string/subtitle_languages" />


        <ListPreference
            android:defaultValue=""
            android:entries="@array/sub_formats"
            android:entryValues="@array/sub_formats_values"
            android:icon="@drawable/baseline_format_quote_24"
            app:key="sub_format"
            app:useSimpleSummaryProvider="true"
            app:title="@string/subtitle_format" />

        <ListPreference
            android:defaultValue="jpg"
            android:entries="@array/thumbnail_containers"
            android:entryValues="@array/thumbnail_containers_values"
            android:icon="@drawable/ic_image"
            app:key="thumbnail_format"
            app:useSimpleSummaryProvider="true"
            app:title="@string/thumbnail_format" />

        <SwitchPreferenceCompat
            android:widgetLayout="@layout/preferece_material_switch"
            app:defaultValue="true"
            app:icon="@drawable/ic_chapters"
            app:key="add_chapters"
            app:summary="@string/add_chapters_summary"
            app:title="@string/add_chapters" />



        <ListPreference
            android:defaultValue="best"
            android:entries="@array/video_formats"
            android:entryValues="@array/video_formats_values"
            android:icon="@drawable/ic_video"
            app:key="video_quality"
            app:useSimpleSummaryProvider="true"
            app:title="@string/video_quality" />

        <SwitchPreferenceCompat
            android:widgetLayout="@layout/preferece_material_switch"
            app:defaultValue="false"
            app:icon="@drawable/baseline_delete_24"
            app:key="remove_audio"
            app:title="@string/remove_audio" />

        <SwitchPreferenceCompat
            android:widgetLayout="@layout/preferece_material_switch"
            app:defaultValue="false"
            app:icon="@drawable/ic_plus"
            app:key="also_download_audio"
            app:title="@string/also_download_audio" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/format">

        <ListPreference
            app:icon="@drawable/ic_format"
            app:dialogTitle="@string/preferred_format_size"
            app:entries="@array/preferred_format_size"
            app:entryValues="@array/preferred_format_size_values"
            android:defaultValue=""
            app:key="preferred_format_size"
            app:useSimpleSummaryProvider="true"
            app:title="@string/preferred_format_size" />

    </PreferenceCategory>



    <Preference
        app:icon="@drawable/baseline_reset_tv_24"
        app:key="reset_preferences"
        android:summary="@string/reset_preferences_in_screen"
        app:title="@string/reset" />

</PreferenceScreen>